potential fix for cv not fitting screen on mobile

--- a/Style/Index.css
+++ b/Style/Index.css
@@ -67,8 +67,8 @@ body {
   font-size: 8px;
 }
 .cv {
-  border-radius: 10px;
-  box-shadow: -1rem 0 3rem #000;
+    height: 100%; 
+    width: 100%;
 }
 /* Social pictures (twitter || linkedin) */
 .Social-pics {
